--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,9 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/june-auto",
+            "glob":"src/_redirects",
+            "input":"src",
+            "output":"/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
